# cross-platform-rust

./: .gitignore  README.md
basic/android/GreetingsJNA/app/: build.gradle
basic/android/GreetingsJNA/app/src/androidTest/java/com/mozilla/greetings/: ExampleInstrumentedTest.java
basic/android/GreetingsJNA/app/src/main/java/com/mozilla/greetings/: GreetingsActivity.java  JNA.java  RustGreetings.java
basic/android/GreetingsJNA/app/src/main/res/layout/: activity_greetings.xml
basic/android/GreetingsJNA/app/src/test/java/com/mozilla/greetings/: ExampleUnitTest.java
basic/android/GreetingsJNA/gradle/wrapper/: gradle-wrapper.properties
basic/cargo/src/: greetings.h  lib.rs
basic/ios/Greetings/Greetings/: NSLayoutConstraint+Utils.swift  RustGreetings.swift  ViewController.swift
basic/ios/Greetings/Greetings.xcodeproj/: project.pbxproj
basic/ios/Greetings/Greetings.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cargo/: Cargo.toml
cargo/src/: lib.rs
complex/: README.md
complex objects/android/Toodle/app/: build.gradle
complex objects/android/Toodle/app/src/main/: AndroidManifest.xml
complex objects/android/Toodle/app/src/main/res/layout/: activity_login.xml
complex objects/android/Toodle/app/src/main/res/values/: strings.xml
complex objects/android/Toodle/gradle/wrapper/: gradle-wrapper.properties
complex objects/cargo/: Cargo.toml
complex objects/cargo/ffi-utils/: Cargo.toml
complex objects/cargo/ffi-utils/src/: lib.rs
complex objects/cargo/list/: Cargo.toml  categories.h  items.h
complex objects/cargo/list/src/: categories.rs  items.rs  lib.rs
complex objects/cargo/logins/: Cargo.toml  logins.h
complex objects/cargo/logins/src/: lib.rs
complex objects/cargo/src/: categories.h  categories.rs  db.h  db.rs  items.h  items.rs  lib.rs  logins.h  logins.rs  toodle.h  utils.rs
complex objects/cargo/store/: Cargo.toml
complex objects/cargo/store/src/: lib.rs
complex objects/ios/ComplexRust/: AppDelegate.swift  ComplexRust-Bridging-Header.h  LoginViewController.swift  NewLoginViewController.swift  ToDoListCategoryViewController.swift  ToDoListItemsTableViewController.swift
complex objects/ios/ComplexRust.xcodeproj/: project.pbxproj
complex objects/ios/ComplexRust.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
complex objects/ios/ComplexRust/Controllers/: ItemViewController.swift  LoginViewController.swift  NewLoginViewController.swift  ToDoListCategoryViewController.swift  ToDoListItemsTableViewController.swift
complex objects/ios/ComplexRust/Store/: RustObject.swift  Store.swift
complex objects/ios/ComplexRust/Store/Categories/: Categories.swift  Category.swift  CategoryManager.swift
complex objects/ios/ComplexRust/Store/Items/: Item.swift
complex objects/ios/ComplexRust/Store/Logins/: Login.swift  LoginManager.swift
complex objects/ios/Greetings/Greetings/: Greetings-Bridging-Header.h
complex objects/ios/Greetings/Greetings.xcodeproj/: project.pbxproj
complex objects/ios/Greetings/Greetings/Base.lproj/: Main.storyboard
complex objects/ios/Greetings/GreetingsTests/: GreetingsTests.swift
complex objects/ios/Toodle/: NSLayoutConstraint+Utils.swift
complex objects/ios/Toodle.xcodeproj/: project.pbxproj
complex objects/ios/Toodle/Base.lproj/: LaunchScreen.storyboard
complex objects/ios/Toodle/Controllers/: NewLoginViewController.swift
complex objects/ios/Toodle/Controllers/Base.lproj/: Main.storyboard
complex objects/ios/Toodle/Rust/: ToodleLib.swift
complex objects/ios/Toodle/Rust/List/: ListManager.swift
complex objects/ios/Toodle/Rust/Logins/: LoginManager.swift
complex/android/Greetings/app/: build.gradle
complex/android/Greetings/app/src/main/res/layout/: activity_greetings.xml
complex/android/Greetings/gradle/wrapper/: gradle-wrapper.properties
complex/android/Toodle/: build.gradle
complex/android/Toodle/app/: build.gradle
complex/android/Toodle/app/src/main/: AndroidManifest.xml
complex/android/Toodle/app/src/main/res/layout/: activity_greetings.xml  activity_new_item.xml  activity_toodle.xml  item.xml
complex/android/Toodle/app/src/main/res/values/: strings.xml  styles.xml
complex/android/Toodle/gradle/wrapper/: gradle-wrapper.properties
complex/cargo/: Cargo.toml  android_build_all.sh
complex/cargo/ffi-utils/src/: android_ffi.rs  lib.rs
complex/cargo/list/: Cargo.toml  categories.h  items.h  labels.h  sql_test  test
complex/cargo/list/src/: categories.rs  errors.rs  items.rs  labels.rs  lib.rs
complex/cargo/logins/src/: lib.rs
complex/cargo/src/: errors.rs  lib.rs  toodle.h
complex/cargo/store/: Cargo.toml  store.h
complex/cargo/store/src/: errors.rs  lib.rs
complex/ios/Toodle/: AppDelegate.swift  ComplexRust-Bridging-Header.h  Toodle-Bridging-Header.h
complex/ios/Toodle.xcodeproj/: project.pbxproj
complex/ios/Toodle.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
complex/ios/Toodle/Controllers/: ItemViewController.swift  LoginViewController.swift  ToDoListCategoryViewController.swift  ToDoListItemsTableViewController.swift  ToDoListLabelsViewController.swift
complex/ios/Toodle/Controllers/Base.lproj/: Main.storyboard
complex/ios/Toodle/Extensions/: Date+Int64.swift  UIColor+Hex.swift
complex/ios/Toodle/Rust/: RustObject.swift  ToodleLib.swift
complex/ios/Toodle/Rust/List/: ListManager.swift
complex/ios/Toodle/Rust/List/Items/: Item.swift
complex/ios/Toodle/Rust/List/Labels/: Label.swift
ios/Greetings/Greetings/: ViewController.swift
ios/Greetings/Greetings.xcodeproj/project.xcworkspace/xcuserdata/emilytoop.xcuserdatad/: UserInterfaceState.xcuserstate
(+33 files in other folders)
