[package]
name = "toodle"
version = "0.1.0"
authors = ["Emily Toop <etoop@mozilla.com>"]
description = "Library for providing To Do List data cross platform"

[lib]
name = "toodle"
crate-type = ["staticlib", "cdylib"]

[dependencies.ffi-utils]
path = "ffi-utils"

[dependencies.store]
path = "store"

[dependencies.logins]
path = "logins"

[dependencies.list]
path = "list"
