[package]
name = "toodle"
version = "0.1.0"
authors = ["Emily Toop <etoop@mozilla.com>"]
description = "Cross Platform Library for providing To Do List data"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[lib]
name = "toodle"
crate-type = ["staticlib", "cdylib"]

[dependencies.ffi-utils]
path = "ffi-utils"

[dependencies.store]
path = "store"

[dependencies.logins]
path = "logins"

[dependencies.list]
path = "list"
