[package]
name = "toodle"
version = "0.1.0"
authors = ["Emily Toop <etoop@mozilla.com>"]
description = "Cross Platform Library for providing To Do List data"

[lib]
name = "toodle"
crate-type = ["staticlib", "cdylib"]

[dependencies]
error-chain = { git = "https://github.com/rnewman/error-chain", branch = "rnewman/sync" }

[dependencies.ffi-utils]
path = "ffi-utils"

[dependencies.store]
path = "store"

[dependencies.list]
path = "list"
