[package]
name = "store"
version = "0.1.0"
authors = ["Emily Toop <etoop@mozilla.com>"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[dependencies.rusqlite]
version = "0.12"
# System sqlite might be very old.
features = ["bundled", "limits"]

[dependencies.mentat]
git = "https://github.com/mozilla/mentat.git"
rev = "5558820"

[dependencies.edn]
git = "https://github.com/mozilla/mentat.git"
rev = "5558820"

[dependencies.mentat_query]
git = "https://github.com/mozilla/mentat.git"
rev = "5558820"

[dependencies.mentat_core]
git = "https://github.com/mozilla/mentat.git"
rev = "5558820"

[dependencies.mentat_db]
git = "https://github.com/mozilla/mentat.git"
rev = "5558820"

[dependencies.ffi-utils]
path = "../ffi-utils"
