[package]
name = "list"
version = "0.1.0"
authors = ["Emily Toop <etoop@mozilla.com>"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[dependencies]
error-chain = { git = "https://github.com/rnewman/error-chain", branch = "rnewman/sync" }
libc = "0.2.32"
time = "0.1.38"
uuid = { version = "0.5", features = ["v4"] }

[dependencies.edn]
git = "https://github.com/mozilla/mentat.git"
rev = "5558820"

[dependencies.mentat]
git = "https://github.com/mozilla/mentat.git"
rev = "5558820"

[dependencies.mentat_core]
git = "https://github.com/mozilla/mentat.git"
rev = "5558820"

[dependencies.store]
path = "../store"

[dependencies.ffi-utils]
path = "../ffi-utils"

[dependencies.rusqlite]
version = "0.12"
# System sqlite might be very old.
features = ["bundled", "limits"]
